2008-02-29  Sam Steingold  <sds@gnu.org>

	* record.d (CLOSURE-CONSTS): fix for the jitc addition

2008-02-29  Sam Steingold  <sds@gnu.org>

	* io.d (pr_cclosure_lang): fix printing of lalist & docstring yet again

2008-02-27  Sam Steingold  <sds@gnu.org>

	use keyword symbols from the core when possible
	* utils/modprep.lisp (mk-objdef, objdef-object, objdef-local): add
	(parse-signature, new-checker): use mk-objdef instead of init-to-objdef
	(check-signature, lexical-analysis, print-tables-1): use
	objdef-object & objdef-local instead of objdef-tag
	NB: this feature is actually disabled because
	&S(...) is invalid (S() is not an lvalue) in non-debug builds
	* modules/berkeley-db/bdb.c, modules/gdbm/gdbm.c, modules/pcre/cpcre.c:
	* modules/syscalls/calls.c, modules/regexp/regexi.c:
	* modules/rawsock/rawsock.c, modules/clx/new-clx/clx.f:
	use #\: in DEFUN to denote core keywords
	* constsym.d (Kcopy): always define
	(Kpreserve, Kinvert): add
	* spvw_debug.d (get_symbol_count, get_constsym) [DEBUG_SPVW]: add
	* modules/syscalls/calls.c (CONSTSYM) [DEBUG_SPVW]: use them

2008-02-27  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c use S(K...) instead of `...` for
	common keywords
	(copy_method_t): move before DEFMODULE for DEFCHECKER to work
	(check_copy_method): replace with a DEFCHECKER
	(copy_method_object): remove

2008-02-26  Sam Steingold  <sds@gnu.org>

	* modules/wildcard/Makefile.in (all): depend on wildcard.fas
	* modules/oracle/Makefile.in (all): depend on oracle.fas
	* modules/fastcgi/Makefile.in (all): depend on fastcgi.fas
	* modules/bindings/glibc/Makefile (all): depend on linux.fas
	* modules/postgresql/Makefile.in (all): depend on postgresql.fas

2008-02-26  Sam Steingold  <sds@gnu.org>

	a less invasive work-around for bug #[ 1413016 ]:
	it is not amd64 which is at fault, but TYPECODES
	* makemake.in (XCFLAGS): revert the 2007-10-15 patch
	* spvw_garcol.d (update) [TYPECODES]: comment out DEBUG_SPVW_ASSERT